# hermetic-llvm

e2e/uefi/: BUILD.bazel  MODULE.bazel  uefi.c  uefi_build_test.sh
runtimes/: BUILD.bazel
toolchain/: BUILD.bazel  cc_toolchain.bzl
toolchain/args/: llvm_target_triple.bzl
toolchain/bootstrap/: declare_toolchains.bzl
toolchain/features/: BUILD.bazel
toolchain/features/legacy/: BUILD.bazel
toolchain/features/runtime_library_search_directories/: BUILD.bazel
toolchain/llvm/: llvm.bzl
toolchain/runtimes/: BUILD.bazel
